force-app/main/default/src/objects/Loop__PDF_Stamp__c/Loop__PDF_Stamp__c.object-meta.xml
<CustomObject>
    <label>PDF Stamp</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Stamp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Stamps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>