force-app/main/default/src/objects/Loop__PDF_Stamp__c/fields/Loop__DDP__c.field-meta.xml
<CustomField>
    <fullName>Loop__DDP__c</fullName>
    <label>DocGen Package</label>
    <referenceTo>Loop__DDP__c</referenceTo>
    <relationshipLabel>PDF Stamps</relationshipLabel>
    <relationshipName>PDF_Stamps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>