force-app/main/default/src/objects/Loop__PDF_Stamp__c/fields/Loop__DDP_Files__c.field-meta.xml
<CustomField>
    <fullName>Loop__DDP_Files__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Merged - stamp entire merged PDF as a whole. All - stamp all PDFs individually. Select individual files to stamp them separately.</inlineHelpText>
    <label>DocGen Package Templates</label>
    <type>TextArea</type>
</CustomField>