force-app/main/default/src/objects/Loop__PDF_Stamp__c/fields/Loop__Description__c.field-meta.xml
<CustomField>
    <fullName>Loop__Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>