force-app/main/default/src/objects/Loop__PDF_Stamp__c/fields/Loop__Pages__c.field-meta.xml
<CustomField>
    <fullName>Loop__Pages__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Specify the pages to be stamped. Use a dash to indicate a range, use commas to separate pages or ranges, or enter Odd or Even (e.g. 1-5,8,10-12). A blank value will stamp all pages.</inlineHelpText>
    <label>Pages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>