force-app/main/default/src/objects/Loop__PDF_Stamp__c/fields/Loop__RGB_Color__c.field-meta.xml
<CustomField>
    <fullName>Loop__RGB_Color__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The 6 character RGB code for the text color of the stamp. (Default: black)</inlineHelpText>
    <label>Text Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>