force-app/main/default/src/objects/Loop__PDF_Stamp__c/fields/Loop__Stamp_Text__c.field-meta.xml
<CustomField>
    <fullName>Loop__Stamp_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Text to stamp onto the PDF. Use [[page]] for the current page number; use [[total pages]] for the total number of pages; [[bookmark]], [[sectionName]], [[filename]]. Use the field tagger to include other dynamic tags. (e.g. [[page]] of [[total pages]])</inlineHelpText>
    <label>Stamp Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>